help links go to Scout staging now.  We'll need to move to prod eventually...even better make this configurable by environment

--- a/webapp/src/main/webapp/home.html
+++ b/webapp/src/main/webapp/home.html
@@ -34,7 +34,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
-		<title>NICS</title>
+		<title>SCOUT</title>
 
 		<!-- TODO: concat module css -->
 		<link rel="stylesheet" type="text/css" href="js/lib/extjs/build/packages/ext-theme-classic/build/resources/ext-theme-classic-all.css" />
