--- a/webapp/src/main/webapp/about.html
+++ b/webapp/src/main/webapp/about.html
@@ -34,6 +34,24 @@
 
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>About SCOUT</title>
+                <link rel="apple-touch-icon" sizes="57x57" href="https://www.scout.ca.gov/static/uploads/favicons/apple-touch-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="https://www.scout.ca.gov/static/uploads/favicons/apple-touch-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="https://www.scout.ca.gov/static/uploads/favicons/apple-touch-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="https://www.scout.ca.gov/static/uploads/favicons/apple-touch-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="https://www.scout.ca.gov/static/uploads/favicons/apple-touch-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="https://www.scout.ca.gov/static/uploads/favicons/apple-touch-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="https://www.scout.ca.gov/static/uploads/favicons/apple-touch-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="https://www.scout.ca.gov/static/uploads/favicons/apple-touch-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="https://www.scout.ca.gov/static/uploads/favicons/apple-touch-icon-180x180.png">
+        <link rel="icon" type="image/png" href="https://www.scout.ca.gov/static/uploads/favicons/favicon-32x32.png" sizes="32x32">
+        <link rel="icon" type="image/png" href="https://www.scout.ca.gov/static/uploads/favicons/android-chrome-192x192.png" sizes="192x192">
+        <link rel="icon" type="image/png" href="https://www.scout.ca.gov/static/uploads/favicons/favicon-96x96.png" sizes="96x96">
+        <link rel="icon" type="image/png" href="https://www.scout.ca.gov/static/uploads/favicons/favicon-16x16.png" sizes="16x16">
+        <link rel="manifest" href="https://www.scout.ca.gov/static/uploads/favicons/manifest.json">
+        <link rel="mask-icon" href="https://www.scout.ca.gov/static/uploads/favicons/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="msapplication-TileImage" content="https://www.scout.ca.gov/static/uploads/favicons/mstile-144x144.png">
+        <meta name="theme-color" content="#ffffff">
         <meta name="description" content="SCOUT provides an information sharing environment to facilitate operational and tactical collaboration among California emergency responders and interagency situational awareness for local, tribal, state, and federal partners for small to extreme scale homeland security incidents, such natural disasters, technological hazards, intentional attacks, and human-caused emergencies.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -50,7 +68,7 @@
 				 	<img src="login/images/scout_logo.png" style="width:423px !important;">
                     <br>
                     <div id='about-content'>
-                    <h1>-About SCOUT</h1>
+                    <h1>About SCOUT</h1>
 The California Governor's Office of Emergency Services (Cal OES) in association with the California Department of Forestry and Fire Protection (CAL FIRE) and through a strategic partnership with the Department of Homeland Security's Science &amp; Technology Directorate (DHS S&amp;T) acquired the Next-Generation Incident Command System (NICS) software for use by California's emergency services professionals. The California deployment of the NICS software is called Situation Awareness and Collaboration Tool (SCOUT). SCOUT provides an information sharing environment to facilitate operational and tactical collaboration among California emergency responders and interagency situational awareness for local, tribal, state, and federal partners for small to extreme scale homeland security incidents, such natural disasters, technological hazards, intentional attacks, and human-caused emergencies.
 <br/>
 <br/>
