--- a/webapp/src/main/webapp/home.html
+++ b/webapp/src/main/webapp/home.html
@@ -71,7 +71,7 @@
 		<link rel="stylesheet" type="text/css" href="styles/print/print.css" />
 		<link rel="stylesheet" type="text/css" href="styles/report/report.css" />
 
-		<script data-main="js/main.js" src="js/lib/require.js"></script>
+		<script data-main="js/main.js?v=2.6.1" src="js/lib/require.js"></script>
 	</head>
 	<body></body>
 </html>
