Encoded special chars in html per code-review feedback.

--- a/modules/login/src/main/resources/META-INF/resources/login/html/terms.html
+++ b/modules/login/src/main/resources/META-INF/resources/login/html/terms.html
@@ -68,14 +68,14 @@
 					<img src="login/images/scout_logo.png" style="width:423px !important;">
                     <br>
                     <!-- Dynamically loaded content for the registration screen is loaded from the following element #tc_content.
-                        Don't change this! -->
+                        Don't change this element! -->
                     <div id="tc_content">
                         <h2 id="tchead">Policy Regarding Acceptable Use of SCOUT</h2>
                         <h3>PURPOSE:</h3>
                         <p>The purpose of this policy is to provide a clear statement to all users of the Situation Awareness &
                             Collaboration Tool (SCOUT) and the responsibility of those using SCOUT to protect information and use the
                             system properly.</p>
-                        <h3>SCOPE & APPLICATION</h3>
+                        <h3>SCOPE &amp; APPLICATION</h3>
                         <p>This policy applies to all those who are granted access to SCOUT including, but not limited to, employees of the
                             Governor’s Office of Emergency Services, employees of the Department of Forestry and Fire Protection (CAL FIRE),
                             participating agencies, and all other authorized users.</p>
