Fixed file encoding on terms.html Deleted unused imports.

--- a/modules/login/src/main/resources/META-INF/resources/login/html/terms.html
+++ b/modules/login/src/main/resources/META-INF/resources/login/html/terms.html
@@ -30,7 +30,7 @@
 
 -->
 <!DOCTYPE html>
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>SCOUT Terms</title>
@@ -77,7 +77,7 @@
                             system properly.</p>
                         <h3>SCOPE &amp; APPLICATION</h3>
                         <p>This policy applies to all those who are granted access to SCOUT including, but not limited to, employees of the
-                            Governor’s Office of Emergency Services, employees of the Department of Forestry and Fire Protection (CAL FIRE),
+                            Governorâ€™s Office of Emergency Services, employees of the Department of Forestry and Fire Protection (CAL FIRE),
                             participating agencies, and all other authorized users.</p>
                         <h3>RESTRICTIONS ON USE</h3>
                         <p>Use must be legal, ethical, and not detrimental to the goals, mission, objectives, and reputation of Cal OES,
@@ -88,16 +88,16 @@
                             <li>Distribute information contained within the Portal without authorization.</li>
                             <li>Mine the portal to obtain user data.</li>
                             <li>Use any automated device or manual process to monitor or gather any data from the Portal or its users in
-                                any manner inconsistent with the agency’s public safety mission.</li>
+                                any manner inconsistent with the agencyâ€™s public safety mission.</li>
                             <li>Create multiple user accounts or create user accounts by automated means or under false or fraudulent
                                 pretenses.</li>
-                            <li>Permit anyone to access the Portal using the User’s credentials.</li>
+                            <li>Permit anyone to access the Portal using the Userâ€™s credentials.</li>
                             <li>Use the Portal for any fraudulent or inappropriate purpose.</li>
                         </ol>
 
                         <h3>ENFORCEMENT, AUDITING, AND REPORTING</h3>
                         <p>Anyone accessing SCOUT who has reasonable belief that another individual or entity is accessing SCOUT in
-                            violation of this policy must report such activity to the Governor’s Office of Emergency Services. Violation of
+                            violation of this policy must report such activity to the Governorâ€™s Office of Emergency Services. Violation of
                             this policy may result in the revocation of access to SCOUT. Violators of this Agreement will be held
                             accountable to the greatest extent permitted by law.  State employees who violate this Agreement may be
                             subjected to discipline up to and including termination.</p>
@@ -106,10 +106,10 @@
                             set forth above.</p>
                         <p>User understands that as a SCOUT user, user may have access to confidential and/or protected information controlled
                             by state and federal law.  All access to the SCOUT system and any type of protected information obtained through
-                            SCOUT is based on a “need to know” and the “right to know.”  Misuse of such information may adversely affect an
-                            individual’s right to privacy, civil liberties, and civil rights, and violates constitutional and state law and/or
+                            SCOUT is based on a â€œneed to knowâ€ and the â€œright to know.â€  Misuse of such information may adversely affect an
+                            individualâ€™s right to privacy, civil liberties, and civil rights, and violates constitutional and state law and/or
                             policy.</p>
-                        <p>"Need to know” means you have a legitimate business purpose in accessing the information. "Right to know" means
+                        <p>"Need to knowâ€ means you have a legitimate business purpose in accessing the information. "Right to know" means
                             you have legal authority pursuant to both law and department policy to access the information. To access
                             information, the "need to know" and the "right to know" must exist at the same time.
                             User understands that the unauthorized or improper use of SCOUT may amount to a violation of California Penal
@@ -126,23 +126,6 @@
                 </div>
             </div>
 
-            <div class="footer">
-                <span class="footer-left">
-                    <span>Version: 6.2</span>
-                </span>
-
-                <span class="footer-right nav">
-                    <span>
-                        <a href="https://www.scout.ca.gov/nics/about.html">About</a>
-                    </span>
-                    <span>
-                        <strong>Terms</strong>
-                    </span>
-                    <span>
-                        <a href="https://scout.ca.gov/scouthelp/" target="_blank">Help</a>
-                    </span>
-                </span>
-            </div>
 
         </div>
 
