--- a/webapp/src/main/webapp/home.html
+++ b/webapp/src/main/webapp/home.html
@@ -70,7 +70,7 @@
 		<link rel="stylesheet" type="text/css" href="styles/photos/photos.css" />
 		<link rel="stylesheet" type="text/css" href="styles/print/print.css" />
 		<link rel="stylesheet" type="text/css" href="styles/report/report.css" />
-
+        <script src="https://use.fontawesome.com/3e7becf875.js"></script>
 		<script data-main="js/main.js" src="js/lib/require.js"></script>
 	</head>
 	<body></body>
