Changed search filter styling to external stylesheet for MIV. Adjusted default field widths in MIV treepanel.

--- a/webapp/src/main/webapp/home.html
+++ b/webapp/src/main/webapp/home.html
@@ -57,6 +57,7 @@
 		<link rel="stylesheet" type="text/css" href="js/lib/extjs/build/classic/theme-classic/resources/theme-classic-all.css" />
 		<link rel="stylesheet" type="text/css" href="styles/nics.css" />
 		<link rel="stylesheet" type="text/css" href="styles/incident/nics.css" />
+        <link rel="stylesheet" type="text/css" href="styles/multiincidentview/nics.css" />
 		<link rel="stylesheet" type="text/css" href="styles/collabroom/collabroom.css" />
 		<link rel="stylesheet" type="text/css" href="styles/map/ol.css" />
 		<link rel="stylesheet" type="text/css" href="styles/map/map.css" />
