Google Analytics library added
Google Analytics library added

--- a/webapp/src/main/webapp/home.html
+++ b/webapp/src/main/webapp/home.html
@@ -32,6 +32,19 @@
 <!DOCTYPE html>
 <html>
 	<head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script type="text/javascript">
+            var gid = (window.location.hostname == "www.scout.ca.gov") ? "G-XK13NKZ6Y9" : "G-4WDQ62R2WR";
+            var gsrclink = "https://www.googletagmanager.com/gtag/js?id=" + gid;
+            document.write("<script async src='" + gsrclink + "'></\script>");
+        </script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', gid);
+        </script>
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 		<title>SCOUT</title>
