--- a/webapp/src/main/webapp/scoutFIRIS.html
+++ b/webapp/src/main/webapp/scoutFIRIS.html
@@ -46,6 +46,7 @@
                 font-weight: bold;
             }
             #servid {
+                width: 100vw;
                 background-color: #F5F5F7;
                 padding: 5px;
                 color: #343535;
@@ -69,24 +70,71 @@
                 width:100%;
                 height:100%;
             }
-        </style>
+			.button {
+				background-color: #000000; /* Green */
+				border: none;
+				color: white;
+				padding: 15px 32px;
+				text-align: center;
+				text-decoration: none;
+				display: inline-block;
+				font-size: 14px;
+				margin: 4px 2px;
+				cursor: pointer;
+			}
+			.buttonR {background-color: #008CBA;} /* Blue */
+			.buttonL {background-color: #4CAF50;} /* Green */ 
+			.buttonH {background-color: #e7e7e7; color: black;} /* Gray */ 
+			.buttonTitle {background-color: #000000; color: white;} /* Gray */ 
+			.buttonInstr {background-color: #000000; color: white;font-size: 12px; text-align: left;} /* Gray */ 
+			
+			.not-allowed{
+			 cursor: not-allowed! important;
+			    
+			}    
+	</style>
 
     </head>
 
     <body>
         <div id="servid">
-                SCOUT-FIRIS INTERFACE
-        </div>
+             	<button class="button buttonTitle not-allowed" ><b>SCOUT-FIRIS INTERFACE</b></b></button>
+          		<button style="float: right;" class="button buttonH" onclick="displayHelp()">Help</button>
+            	<button style="float: right;" class="button buttonL" onclick="displayLogin()">Login</button>
+            	<button style="float: right;" class="button buttonR" onclick="displayRegistration()">Register</button>
+              	<button style="float: right;" class="button buttonInstr not-allowed" >Please register if you are a first time user of SCOUT-FIRIS Application.<br>Please login if you are already registered.</button>
+          </div>
 
+<script>
+    function displayRegistration() {
+        document.getElementById("iframeFiris").innerHTML = 
+        	"<iframe src=\"https://secure.intterragroup.com/account/new?g=9c6de46e-5aad-4132-8220-b28d791b6c08\" ></iframe>";
+
+    }
+    function displayLogin() {
+        document.getElementById("iframeFiris").innerHTML = 
+        	"<iframe src=\"https://portal.intterragroup.com\" ></iframe>";
+
+    }
+    function displayHelp() {
+        document.getElementById("iframeFiris").innerHTML = 
+        	"<iframe src=\"https://intterra.helpdocs.com/client-specific/firis\" ></iframe>";
+
+    }
+</script>
 
         <br />
 
-        <div id="iframeInterra">
-            <iframe name="iframe1" src="https://portal.intterragroup.com//">
+        <div id="iframeFiris"/>
+
+<!--
+         <div id="iframeFiris">
+            <iframe name="iframe1" src="/nics/proxy.jsp?redirect2Firis">
+            
             <p>Your browser does not support iframes.</p>
             </iframe>
         </div>
-
+ -->
     </body>
 
 </html>
